# contour

./: Changelog.md  TODO.md
src/contour/: Config.h  ContourApp.cpp  ContourApp.h  TerminalSession.cpp  TerminalSession.h  helper.h
src/contour/opengl/: OpenGLRenderer.cpp  OpenGLRenderer.h  ShaderConfig.cpp  TerminalWidget.cpp  TerminalWidget.h
src/contour/opengl/shaders/: text.frag
src/crispy/: CLI.cpp  StrongLRUCache.h  StrongLRUHashtable.h  base64.h  logstore.h
src/terminal/: CMakeLists.txt  DECTextLocator.cpp  Functions.h  Image.h  InputGenerator.cpp  InputGenerator.h  MessageParser.h  Parser.h  Parser_test.cpp  Screen.cpp  Screen.h  ScreenEvents.h  Sequencer.cpp  Sequencer.h  Terminal.cpp  Terminal.h  primitives.h
src/terminal_renderer/: BoxDrawingRenderer.h  CMakeLists.txt  DecorationRenderer.cpp  DecorationRenderer.h  Decorator.h  FontDescriptions.h  GridMetrics.h  Pixmap.h  RenderTarget.h  Renderer.cpp  Renderer.h  TextRenderer.cpp  TextRenderer.h  TextureAtlas.cpp  TextureAtlas.h  TextureAtlas_test.cpp  utils.h
src/text_shaper/: directwrite_shaper.cpp  open_shaper.cpp  shaper.cpp  shaper.h
